force-app/main/default/objects/ERA_Dispatch__c/ERA_Dispatch__c.object-meta.xml
<CustomObject>
    <label>ERA Dispatch</label>
    <nameField>
        <displayFormat>DSP-{0000}</displayFormat>
        <label>Dispatch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERA Dispatches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>