force-app/main/default/objects/ERA_Dispatch__c/fields/Caravan_Trailer__c.field-meta.xml
<CustomField>
    <fullName>Caravan_Trailer__c</fullName>
    <label>Caravan / Trailer</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>