force-app/main/default/objects/ERA_Dispatch__c/fields/Dispatch_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Restriction__c</fullName>
    <label>Dispatch Restriction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>