force-app/main/default/objects/ERA_Dispatch__c/fields/Distance_From_Home__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Home__c</fullName>
    <label>Distance From Home</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Under 100km</fullName><default>false</default><label>Under 100km</label></value>
            <value><fullName>Over 100km</fullName><default>false</default><label>Over 100km</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>