force-app/main/default/objects/ERA_Dispatch__c/fields/Fault_Type__c.field-meta.xml
<CustomField>
    <fullName>Fault_Type__c</fullName>
    <label>Fault Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Mechanical</fullName><default>false</default><label>Mechanical</label></value>
            <value><fullName>Flat Tyre</fullName><default>false</default><label>Flat Tyre</label></value>
            <value><fullName>Fuel</fullName><default>false</default><label>Fuel</label></value>
            <value><fullName>Lockout</fullName><default>false</default><label>Lockout</label></value>
            <value><fullName>EV Out of Charge</fullName><default>false</default><label>EV Out of Charge</label></value>
            <value><fullName>Fire</fullName><default>false</default><label>Fire</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>