force-app/main/default/objects/ERA_Dispatch__c/fields/Injury_Details__c.field-meta.xml
<CustomField>
    <fullName>Injury_Details__c</fullName>
    <label>Injury Details</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>