force-app/main/default/objects/ERA_Dispatch__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ERA Dispatches</relationshipLabel>
    <relationshipName>ERA_Dispatches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>