force-app/main/default/objects/ERA_Dispatch__c/fields/Product_Tier__c.field-meta.xml
<CustomField>
    <fullName>Product_Tier__c</fullName>
    <label>Product Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Total Care</fullName><default>false</default><label>Total Care</label></value>
            <value><fullName>Extra Care</fullName><default>false</default><label>Extra Care</label></value>
            <value><fullName>Roadside Care</fullName><default>false</default><label>Roadside Care</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>