force-app/main/default/objects/ERA_Dispatch__c/fields/Safety_Concern__c.field-meta.xml
<CustomField>
    <fullName>Safety_Concern__c</fullName>
    <label>Safety Concern</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>