force-app/main/default/objects/ERA_Dispatch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Dispatched</fullName><default>false</default><label>Dispatched</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>