force-app/main/default/objects/ERA_Dispatch__c/fields/Towing_Limit_km__c.field-meta.xml
<CustomField>
    <fullName>Towing_Limit_km__c</fullName>
    <label>Towing Limit (km)</label>
    <formula>IF(ISPICKVAL(Product_Tier__c, 'Total Care'), 100, IF(ISPICKVAL(Product_Tier__c, 'Extra Care'), 60, 20))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>