force-app/main/default/objects/ERA_Dispatch__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <label>Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>ERA Dispatches</relationshipLabel>
    <relationshipName>ERA_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>